fixed newsdate ribbon alignment to be consistent

--- a/djangocon/static/css/main.css
+++ b/djangocon/static/css/main.css
@@ -740,7 +740,7 @@ a.anchor {
   font-size: 105px;
   position: absolute;
   color: #fff;
-  top: -9px;
+  top: 8px;
   left: -124px;
   z-index: 0;
 }
@@ -751,7 +751,7 @@ a.anchor {
   font-size: 105px;
   position: absolute;
   color: #fff;
-  top: -9px;
+  top: 8px;
   right: -124px;
   z-index: 0;
 }
